--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -825,11 +825,149 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from json import load"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = load(open(\"result.json\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['ALLISON', 'CLARK', 'EATON', 'GAZ', 'HINO', 'HYUNDAI', 'ISUZU', 'IVECO', 'KAMAZ', 'LAND ROVER', 'MACK', 'MERCEDES', 'MITSUBISHI', 'NISSAN', 'PEGASO', 'RENAULT', 'SCANIA', 'SHAANXI', 'SPICER', 'TOYOTA', 'TURNER', 'VOLKSWAGEN', 'VOLVO', 'ZF'])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xlrd, xlwt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wb = xlwt.Workbook()\n",
+    "for key in result.keys():\n",
+    "    ws = wb.add_sheet(key)\n",
+    "# wb.save('xl_rec.xls')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_marka(wb, data, key):\n",
+    "    ws = wb.get_sheet(key)\n",
+    "    marka_data = data[key]\n",
+    "    index_row = 0\n",
+    "    style_model = xlwt.easyxf('pattern: pattern solid, fore_colour light_blue;',\n",
+    "                              'font: colour white, bold True;')\n",
+    "    style_title = xlwt.easyxf('pattern: pattern solid, fore_colour light_yellow;',\n",
+    "                              'font: colour black, bold True;')\n",
+    "    style_error = xlwt.easyxf('pattern: pattern solid, fore_colour red;',\n",
+    "                              'font: colour black, bold True;')\n",
+    "    for model in marka_data:\n",
+    "        ws.write(index_row, 0, model, style=style_model)\n",
+    "        index_row += 1\n",
+    "        try:\n",
+    "            for index_col, key in enumerate(marka_data[model][0]):\n",
+    "                ws.write(index_row, index_col, key, style=style_title)\n",
+    "        except IndexError:\n",
+    "            ws.write(index_row, 0, \"Do not Have Value\")\n",
+    "        index_row += 1\n",
+    "        for item in marka_data[model]:\n",
+    "            for index_col, value in enumerate(item.values()):\n",
+    "                ws.write(index_row, index_col, value)\n",
+    "            index_row += 1\n",
+    "            \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "    wb.save('xl_rec.xls')\n",
+    "    return index_row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ALLISON 822\n",
+      "CLARK 39\n",
+      "EATON 5898\n",
+      "GAZ 4\n",
+      "HINO 89\n",
+      "HYUNDAI 25\n",
+      "ISUZU 259\n",
+      "IVECO 100\n",
+      "KAMAZ 18\n",
+      "LAND ROVER 4\n",
+      "MACK 9\n",
+      "MERCEDES 781\n",
+      "MITSUBISHI 156\n",
+      "NISSAN 116\n",
+      "PEGASO 27\n",
+      "RENAULT 64\n",
+      "SCANIA 105\n",
+      "SHAANXI 11\n",
+      "SPICER 81\n",
+      "TOYOTA 31\n",
+      "TURNER 5\n",
+      "VOLKSWAGEN 3\n",
+      "VOLVO 808\n",
+      "ZF 2910\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in result.keys():\n",
+    "    rows = write_marka(wb, result, key)\n",
+    "    print(key, rows)"
+   ]
   }
  ],
  "metadata": {
@@ -848,7 +986,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
