--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -82,7 +82,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -832,6 +834,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Build Xcel\n",
+    "==="
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -930,7 +940,9 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -967,6 +979,195 @@
     "for key in result.keys():\n",
     "    rows = write_marka(wb, result, key)\n",
     "    print(key, rows)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "work with error\n",
+    "==="
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from json import load\n",
+    "import xlwt\n",
+    "from tqdm.autonotebook import tqdm\n",
+    "error = load(open(\"error.json\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "session = requests.session()\n",
+    "cred = {\"log\":\"BZRussia\", \"pwd\":\"bezares123\"}\n",
+    "url = \"https://bezares.com/login/\"\n",
+    "session.post(url, data=cred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wb = xlwt.Workbook()\n",
+    "for key in error.keys():\n",
+    "    ws = wb.add_sheet(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6475836698cc41bc8a0a11998728f597",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=6), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=72), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=50), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=2), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=3), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=11), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=195), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for marka in tqdm(error):\n",
+    "    ws = wb.get_sheet(marka)\n",
+    "    index_row = 0\n",
+    "    for model in tqdm(error[marka], leave=False):\n",
+    "        url = f\"https://bezares.com/customer-area/?marca={marka}&modelo={model}\"\n",
+    "        res = session.get(url)\n",
+    "        soup = BeautifulSoup(res.text)\n",
+    "        keys = ['model', \"href\"] + [i.text for i in soup.find(\"tr\", {\"class\":\"encabezado\"}).children]\n",
+    "        for index_col, key in enumerate(keys):\n",
+    "            ws.write(index_row, index_col, key)\n",
+    "        index_row += 1\n",
+    "        tag_data = [model]\n",
+    "        for tag in soup.find(\"tr\", {\"class\":\"estilocelda4\"}).children:\n",
+    "            tag.find('a') and tag_data.append(tag.find('a').get(\"href\")) or tag_data.append(tag.text.strip())\n",
+    "        for index_col, val in enumerate(tag_data):\n",
+    "            ws.write(index_row, index_col, val)\n",
+    "        index_row += 2\n",
+    "wb.save(\"error.xls\")"
    ]
   }
  ],
