--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,27 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['ALLISON', 'CLARK', 'EATON', 'GAZ', 'HINO', 'HYUNDAI', 'ISUZU', 'IVECO', 'KAMAZ', 'LAND ROVER', 'MACK', 'MERCEDES', 'MITSUBISHI', 'NISSAN', 'PEGASO', 'RENAULT', 'SCANIA', 'SHAANXI', 'SPICER', 'TOYOTA', 'TURNER', 'VOLKSWAGEN', 'VOLVO', 'ZF'])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,19 +870,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "wb = xlwt.Workbook()\n",
     "for key in result.keys():\n",
-    "    ws = wb.add_sheet(key)\n",
-    "# wb.save('xl_rec.xls')"
+    "    ws = wb.add_sheet(key)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,68 +889,58 @@
     "    ws = wb.get_sheet(key)\n",
     "    marka_data = data[key]\n",
     "    index_row = 0\n",
-    "    style_model = xlwt.easyxf('pattern: pattern solid, fore_colour light_blue;',\n",
-    "                              'font: colour white, bold True;')\n",
     "    style_title = xlwt.easyxf('pattern: pattern solid, fore_colour light_yellow;',\n",
     "                              'font: colour black, bold True;')\n",
-    "    style_error = xlwt.easyxf('pattern: pattern solid, fore_colour red;',\n",
-    "                              'font: colour black, bold True;')\n",
     "    for model in marka_data:\n",
-    "        ws.write(index_row, 0, model, style=style_model)\n",
-    "        index_row += 1\n",
     "        try:\n",
-    "            for index_col, key in enumerate(marka_data[model][0]):\n",
+    "            for index_col, key in enumerate([\"model\"] + list(marka_data[model][0].keys())):\n",
     "                ws.write(index_row, index_col, key, style=style_title)\n",
     "        except IndexError:\n",
-    "            ws.write(index_row, 0, \"Do not Have Value\")\n",
+    "            ws.write(index_row, 0, model)\n",
+    "            ws.write(index_row, 1, 'Do not have any data for this model')\n",
     "        index_row += 1\n",
     "        for item in marka_data[model]:\n",
-    "            for index_col, value in enumerate(item.values()):\n",
+    "            for index_col, value in enumerate([model] + list(item.values())):\n",
     "                ws.write(index_row, index_col, value)\n",
     "            index_row += 1\n",
-    "            \n",
     "        \n",
-    "        \n",
-    "        \n",
-    "    wb.save('xl_rec.xls')\n",
+    "    wb.save('xl_rec2.xls')\n",
     "    return index_row"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ALLISON 822\n",
-      "CLARK 39\n",
-      "EATON 5898\n",
-      "GAZ 4\n",
-      "HINO 89\n",
-      "HYUNDAI 25\n",
-      "ISUZU 259\n",
-      "IVECO 100\n",
-      "KAMAZ 18\n",
-      "LAND ROVER 4\n",
-      "MACK 9\n",
-      "MERCEDES 781\n",
-      "MITSUBISHI 156\n",
-      "NISSAN 116\n",
-      "PEGASO 27\n",
-      "RENAULT 64\n",
-      "SCANIA 105\n",
-      "SHAANXI 11\n",
-      "SPICER 81\n",
-      "TOYOTA 31\n",
-      "TURNER 5\n",
-      "VOLKSWAGEN 3\n",
-      "VOLVO 808\n",
-      "ZF 2910\n"
+      "ALLISON 775\n",
+      "CLARK 30\n",
+      "EATON 5575\n",
+      "GAZ 3\n",
+      "HINO 64\n",
+      "HYUNDAI 18\n",
+      "ISUZU 200\n",
+      "IVECO 78\n",
+      "KAMAZ 16\n",
+      "LAND ROVER 3\n",
+      "MACK 6\n",
+      "MERCEDES 682\n",
+      "MITSUBISHI 123\n",
+      "NISSAN 85\n",
+      "PEGASO 18\n",
+      "RENAULT 44\n",
+      "SCANIA 82\n",
+      "SHAANXI 8\n",
+      "SPICER 54\n",
+      "TOYOTA 24\n",
+      "TURNER 4\n",
+      "VOLKSWAGEN 2\n",
+      "VOLVO 743\n",
+      "ZF 2619\n"
      ]
     }
    ],
@@ -1046,7 +1015,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6475836698cc41bc8a0a11998728f597",
+       "model_id": "7336e4af9289467eb8bc600efd9881ab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1153,20 +1122,24 @@
     "for marka in tqdm(error):\n",
     "    ws = wb.get_sheet(marka)\n",
     "    index_row = 0\n",
+    "    header = True\n",
     "    for model in tqdm(error[marka], leave=False):\n",
     "        url = f\"https://bezares.com/customer-area/?marca={marka}&modelo={model}\"\n",
     "        res = session.get(url)\n",
     "        soup = BeautifulSoup(res.text)\n",
-    "        keys = ['model', \"href\"] + [i.text for i in soup.find(\"tr\", {\"class\":\"encabezado\"}).children]\n",
-    "        for index_col, key in enumerate(keys):\n",
-    "            ws.write(index_row, index_col, key)\n",
-    "        index_row += 1\n",
+    "        if header:\n",
+    "            keys = ['model', \"href\"] + [i.text for i in soup.find(\"tr\", {\"class\":\"encabezado\"}).children]\n",
+    "            for index_col, key in enumerate(keys):\n",
+    "                ws.write(index_row, index_col, key)\n",
+    "            index_row += 1\n",
+    "            header = False\n",
     "        tag_data = [model]\n",
     "        for tag in soup.find(\"tr\", {\"class\":\"estilocelda4\"}).children:\n",
-    "            tag.find('a') and tag_data.append(tag.find('a').get(\"href\")) or tag_data.append(tag.text.strip())\n",
+    "            tag.find('a') and tag_data.append(\"https://bezares.com\" + tag.find('a').get(\"href\")) or tag_data.append(tag.text.strip())\n",
     "        for index_col, val in enumerate(tag_data):\n",
     "            ws.write(index_row, index_col, val)\n",
-    "        index_row += 2\n",
+    "        index_row += 1\n",
+    "    header = True\n",
     "wb.save(\"error.xls\")"
    ]
   }
