--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,14 +893,21 @@
     "                              'font: colour black, bold True;')\n",
     "    for model in marka_data:\n",
     "        try:\n",
-    "            for index_col, key in enumerate([\"model\"] + list(marka_data[model][0].keys())):\n",
+    "            arr = [\"model\"] + list(marka_data[model][0].keys())\n",
+    "            arr.insert(3, \"extra href\")\n",
+    "            for index_col, key in enumerate(arr):\n",
     "                ws.write(index_row, index_col, key, style=style_title)\n",
     "        except IndexError:\n",
     "            ws.write(index_row, 0, model)\n",
     "            ws.write(index_row, 1, 'Do not have any data for this model')\n",
     "        index_row += 1\n",
     "        for item in marka_data[model]:\n",
-    "            for index_col, value in enumerate([model] + list(item.values())):\n",
+    "            arr = [model] + list(item.values())\n",
+    "            if \"+\" in arr[1]:\n",
+    "                arr.insert(3, f\"https://bezares.com/databook/datos/zf/{arr[1].split('+')[-1]}.pdf\")\n",
+    "            else:\n",
+    "                arr.insert(3, \"\")\n",
+    "            for index_col, value in enumerate(arr):\n",
     "                ws.write(index_row, index_col, value)\n",
     "            index_row += 1\n",
     "        \n",
@@ -910,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
